@@ -82,6 +82,11 @@ Adjusted placement of the Checkout and Publish buttons in search results and
 elsewhere so that they're not so close to the border of the box that contains
 them (Bug #194). [Phillip Smith]
 
+=item *
+
+Adjusted style of Check In and Move popup menu. Allows for easier selection of
+appropriate action (Bug #193). [Phillip Smith]
+
 =back
 
 =head2 Bug Fixes
